Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91161

qtconnectivity/pingpong example crashes on Sony Xperia XZ2 Compact

    XMLWordPrintable

Details

    • Android
    • dec429e0778493bc4e85d6b18202804d0bbbe5f1 (qt/qtbase/dev) 7898f6a6aa1fec3638d283ac271f01770453fa12 (qt/qtbase/6.1) 7833eae30499b29d810c2f105db1e56f905008c2 (qt/qtbase/6.0) 8a5a172987c659369831b87585a08003caef0127 (qt/tqtc-qtbase/tqtc/lts-5.15.3)

    Description

      Running the pingpong example from qtconnectivity on my Sony Xperia XZ2 Compact, I get the following output when running it. It crashes/does nothing.

      Output:

      I xample.pingpon: Late-enabling -Xcheck:jni
      E xample.pingpon: Unknown bits set in runtime_flags: 0x8000
      I Perf    : Connecting to perf service.
      E Perf    : Fail to get file list org.qtproject.example.pingpong
      E Perf    : getFolderSize() : Exception_1 = java.lang.NullPointerException: Attempt to get length of null array
      E Perf    : Fail to get file list org.qtproject.example.pingpong
      E Perf    : getFolderSize() : Exception_1 = java.lang.NullPointerException: Attempt to get length of null array
      W System  : ClassLoader referenced unknown path:
      D Qt JAVA : Class org.qtproject.qt.android.bluetooth.QtBluetoothBroadcastReceiver does not implement setActivity method
      I QtCore  : Start
      I Qt      : qt started
      I AdrenoGLES: QUALCOMM build                   : 34b6654, Id4a1c1aeea
      I AdrenoGLES: Build Date                       : 09/27/19
      I AdrenoGLES: OpenGL ES Shader Compiler Version: EV031.27.05.01
      I AdrenoGLES: Local Branch                     : mybranche9e11bf4-9ce3-f1c7-8600-1458d0b52ae8
      I AdrenoGLES: Remote Branch                    : quic/gfx-adreno.lnx.1.0.r72-rel
      I AdrenoGLES: Remote Branch                    : NONE
      I AdrenoGLES: Reconstruct Branch               : NOTHING
      I AdrenoGLES: Build Config                     : S P 8.0.11 AArch32
      I AdrenoGLES: PFP: 0x016ee187, ME: 0x00000000
      W AdrenoUtils: <ReadGpuID_from_sysfs:194>: Failed to open /sys/class/kgsl/kgsl-3d0/gpu_model
      W AdrenoUtils: <ReadGpuID:218>: Failed to read chip ID from gpu_model. Fallback to use the GSL path
      W Gralloc3: mapper 3.x is not supported
      E SurfaceComposerClient: SurfaceComposerClient::createSurface error Invalid argument
      E SurfaceView: Exception configuring surface
      E SurfaceView: android.view.Surface$OutOfResourcesException
      E SurfaceView: 	at android.view.SurfaceControl.nativeCreate(Native Method)
      E SurfaceView: 	at android.view.SurfaceControl.<init>(SurfaceControl.java:796)
      E SurfaceView: 	at android.view.SurfaceControl.<init>(SurfaceControl.java:77)
      E SurfaceView: 	at android.view.SurfaceControl$Builder.build(SurfaceControl.java:534)
      E SurfaceView: 	at android.view.SurfaceView.updateSurface(SurfaceView.java:618)
      E SurfaceView: 	at android.view.SurfaceView$2.onPreDraw(SurfaceView.java:155)
      E SurfaceView: 	at android.view.ViewTreeObserver.dispatchOnPreDraw(ViewTreeObserver.java:1088)
      E SurfaceView: 	at android.view.ViewRootImpl.performTraversals(ViewRootImpl.java:2751)
      E SurfaceView: 	at android.view.ViewRootImpl.doTraversal(ViewRootImpl.java:1727)
      E SurfaceView: 	at android.view.ViewRootImpl$TraversalRunnable.run(ViewRootImpl.java:7612)
      E SurfaceView: 	at android.view.Choreographer$CallbackRecord.run(Choreographer.java:1029)
      E SurfaceView: 	at android.view.Choreographer.doCallbacks(Choreographer.java:852)
      E SurfaceView: 	at android.view.Choreographer.doFrame(Choreographer.java:787)
      E SurfaceView: 	at android.view.Choreographer$FrameDisplayEventReceiver.run(Choreographer.java:1014)
      E SurfaceView: 	at android.os.Handler.handleCallback(Handler.java:883)
      E SurfaceView: 	at android.os.Handler.dispatchMessage(Handler.java:100)
      E SurfaceView: 	at android.os.Looper.loop(Looper.java:359)
      E SurfaceView: 	at android.app.ActivityThread.main(ActivityThread.java:7418)
      E SurfaceView: 	at java.lang.reflect.Method.invoke(Native Method)
      E SurfaceView: 	at com.android.internal.os.RuntimeInit$MethodAndArgsCaller.run(RuntimeInit.java:492)
      E SurfaceView: 	at com.android.internal.os.ZygoteInit.main(ZygoteInit.java:935)
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            cnn Qt Core & Network
            andreasbuhr Andreas Buhr
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: