src/plugins/platforms/android/qandroidplatformwindow.cpp
@@ -60,14 +60,21 @@ QAndroidPlatformWindow::QAndroidPlatformWindow(QWindow *window)
     m_windowId = winIdGenerator.fetchAndAddRelaxed(1) + 1;
     setWindowState(window->windowStates());
 
+    // the following is in relation to the virtual geometry
     const bool forceMaximize = m_windowState & (Qt::WindowMaximized | Qt::WindowFullScreen);
-    const QRect requestedGeometry = forceMaximize ? QRect() : window->geometry();
-    const QRect availableGeometry = (window->parent()) ? window->parent()->geometry() : platformScreen()->availableGeometry();
-    const QRect finalGeometry = QPlatformWindow::initialGeometry(window, requestedGeometry,
-                                                                 availableGeometry.width(), availableGeometry.height());
+    const QRect requestedNativeGeometry =
+            forceMaximize ? QRect() : QHighDpi::toNativePixels(window->geometry(), window);
+    const QRect availableDeviceIndependentGeometry = (window->parent())
+            ? window->parent()->geometry()
+            : QHighDpi::fromNativePixels(platformScreen()->availableGeometry(), window);
 
-   if (requestedGeometry != finalGeometry)
-       setGeometry(QHighDpi::toNativePixels(finalGeometry, window));
+    // initialGeometry returns in native pixels
+    const QRect finalNativeGeometry = QPlatformWindow::initialGeometry(
+            window, requestedNativeGeometry, availableDeviceIndependentGeometry.width(),
+            availableDeviceIndependentGeometry.height());
+
+    if (requestedNativeGeometry != finalNativeGeometry)
+        setGeometry(finalNativeGeometry);
 }
 
 void QAndroidPlatformWindow::lower()
